tests/neg/magic-offset-header-c.scala
//> using options -Xmagic-offset-header:///SOURCE_CODE_START_MARKER

val generatedCode = 123

///SOURCE_CODE_START_MARKER

def userCode =
  val x: String = 0  // error
